[package]
name = "cx"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Codex account/session router using per-account CODEX_HOME profiles"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
